# yy-fMRI-kit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
examples/: ISC_sample.ipynb  isc.ipynb  preproc_postproc.ipynb  subject_run.ipynb
src/yy_fmri_kit/: cli.py
src/yy_fmri_kit/helpers/: find_files.py
src/yy_fmri_kit/helpers/isc/: compute.py  parcel.py  roi.py  roi_atlas.py  timeseries.py
src/yy_fmri_kit/helpers/preproc/: denoising.py  dicom2bids.py  group_mask.py  parcellation.py  time_shift.py  visualization.py
src/yy_fmri_kit/io/: build_events.py  dicom2bids.py  find_files.py
src/yy_fmri_kit/isc/: parcel.py  roi.py  timeseries.py
src/yy_fmri_kit/postproc/: atlas_resolver.py  parcellation.py  time_shift.py  timeshift_core.py
src/yy_fmri_kit/preproc/: compute_tsnr.py  denoising.py  fmriprep.py  group_mask.py
src/yy_fmri_kit/static/io/: config.py  heuristics.py
src/yy_fmri_kit/static/isc/: config.py
src/yy_fmri_kit/static/preproc/: __init__.py  config.py
src/yy_fmri_kit/visualization/: timeshift.py  visualization.py
tests/: __init__.py  test_yy_fmri_kit.py
