[project]
name = "yy_fmri_kit"
version = "0.1.0"
description = "Python package providing tools for preproccessing and intersubject correlation analysis for fMRI data."
readme = "README.md"
authors = [
  {name = "Tzlil Tabib", email = "tzliltabib@gmail.com"}
]
maintainers = [
  {name = "Tzlil Tabib", email = "tzliltabib@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/TzlilTabib/yy_fmri_kit/issues"
changelog = "https://github.com/TzlilTabib/yy_fmri_kit/blob/master/changelog.md"
homepage = "https://github.com/TzlilTabib/yy_fmri_kit"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
yy_fmri_kit = "yy_fmri_kit.cli:app"
"yy-fmri-kit" = "yy_fmri_kit.cli:main"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
